--- a/css/main.css
+++ b/css/main.css
@@ -661,6 +661,10 @@ video {
   z-index: 20;
 }
 
+.z-\[49\] {
+  z-index: 49;
+}
+
 .m-0 {
   margin: 0px;
 }
@@ -1223,10 +1227,6 @@ video {
 
 .max-w-\[150px\] {
   max-width: 150px;
-}
-
-.max-w-\[70px\] {
-  max-width: 70px;
 }
 
 .table-fixed {
@@ -1840,12 +1840,16 @@ video {
   padding-top: 6px;
 }
 
-.pr-1\.5 {
-  padding-right: 0.375rem;
+.pl-\[2px\] {
+  padding-left: 2px;
 }
 
-.pr-\[100\%\] {
-  padding-right: 100%;
+.pr-\[4px\] {
+  padding-right: 4px;
+}
+
+.pr-\[50\%\] {
+  padding-right: 50%;
 }
 
 .pl-\[36px\] {
@@ -1856,20 +1860,8 @@ video {
   padding-left: 26px;
 }
 
-.pr-\[50\%\] {
-  padding-right: 50%;
-}
-
-.pl-\[2px\] {
-  padding-left: 2px;
-}
-
-.pr-\[2px\] {
-  padding-right: 2px;
-}
-
-.pr-\[4px\] {
-  padding-right: 4px;
+.pr-\[30\%\] {
+  padding-right: 30%;
 }
 
 .text-center {
@@ -1935,10 +1927,6 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
-}
-
-.text-\[6px\] {
-  font-size: 6px;
 }
 
 .font-light {
